k8s/media/bazarr/resources/resources.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
      containers:
        - name: bazarr
          image: ghcr.io/onedr0p/bazarr:1.5.1@sha256:1c88830f3c51fc2f1230ad7040bcbe30f197449ae93f835448cf516d8b7e5e82
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: volume
              mountPath: /config
            - name: truenas-media
              mountPath: /media
          ports:
            - name: http
              containerPort: 6767

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    gethomepage.dev/href: https://bazarr.durbin.casa
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: bazarr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: bazarr
    gethomepage.dev/name: Bazarr
spec:
  ingressClassName: internal
  rules:
    - host: &host bazarr.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
